--- a/resumes/static/resumes/details.css
+++ b/resumes/static/resumes/details.css
@@ -110,3 +110,9 @@
     border-radius: 5px;
     padding: 0px 5px;
 }
+
+.action-buttons > * {
+    display: block;
+    margin-bottom: 10px;
+    width: fit-content;
+}
