--- a/resumes/templates/resumes/grouppage.html
+++ b/resumes/templates/resumes/grouppage.html
@@ -42,7 +42,7 @@
         </div>
         <div class="modal-body">
             <form id="searchUsersToInviteForm" method="GET" action="{% url 'user_search' %}" data-group-id="{{ group.id }}">
-                <input id="inviteUsersSearchBar" class="search-bar" type="text" name="query" placeholder="Search by username, email, or name">
+                <input id="inviteUsersSearchBar" class="search-bar" type="text" name="query" placeholder="Search by username">
 
                 {% comment %} group.id gets passed to view user_search, then gets passed to template invite_user_select.html
                 so group id is accessible in view sendinvite {% endcomment %}
